# slinting

./: Cargo.toml  LICENSE  README.md  build.rs
src/: main.rs
ui/: main.slint
