[package]
name = "slinting"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = { version = "1.10.0", default-features = false, features = [
  "backend-default",
  "renderer-skia",
  "renderer-software",
  "std",
  "serde",
  "compat-1-2",
] }

[build-dependencies]
slint-build = "1.10.0"

[profile.release]
strip = true
# or strip = "symbols"
